--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@netlify/functions": "^1.0.0",
     "@types/node": "^18.0.0",
     "@types/node-telegram-bot-api": "^0.57.1",
+    "@types/twitter-text": "^3.1.2",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "aws-sdk": "^2.1163.0",
     "node-telegram-bot-api": "^0.58.0",
     "tiny-invariant": "^1.2.0",
-    "twitter-api-v2": "^1.12.3"
+    "twitter-api-v2": "^1.12.3",
+    "twitter-text": "^3.1.0"
   }
 }
