--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "devDependencies": {
     "@netlify/functions": "^1.0.0",
+    "@types/mime-types": "^2.1.1",
     "@types/node": "^18.0.0",
     "@types/node-telegram-bot-api": "^0.57.1",
     "@types/twitter-text": "^3.1.2",
@@ -14,6 +15,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1163.0",
+    "mime-types": "^2.1.35",
     "node-telegram-bot-api": "^0.58.0",
     "tiny-invariant": "^1.2.0",
     "twitter-api-v2": "^1.12.3",
