--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-telegram-bot-api": "^0.58.0",
     "tiny-invariant": "^1.2.0",
     "twitter-api-v2": "^1.12.3",
-    "twitter-text": "^3.1.0"
+    "twitter-text": "^3.1.0",
+    "@quentin_widlocher/telegram-logger": "^1.1.0"
   }
 }
